feat: implement job tracking CLI with ratatui and crossterm
- Added dependencies for ratatui, crossterm, serde, serde_json, chrono, and anyhow in Cargo.toml.
- Created models for Job and Status with serialization support.
- Implemented job storage functionality to load and save jobs from/to a JSON file.
- Developed a terminal UI to display job listings, allowing users to add, delete, and change job statuses.
- Introduced input handling for job details and navigation within the UI.
- Enhanced the UI with dynamic statistics on job applications.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ratatui = "0.26"       # The UI library
+crossterm = "0.27"     # Terminal manipulation backend
+serde = { version = "1.0", features = ["derive"] } # Serialization
+serde_json = "1.0"     # Save data to JSON
+chrono = { version = "0.4", features = ["serde"] } # Time handling
+anyhow = "1.0"         # Easy error handling
