--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde_json = "1.0"     # Save data to JSON
 chrono = { version = "0.4", features = ["serde"] } # Time handling
 anyhow = "1.0"         # Easy error handling
 directories = "6.0.0"
+open = "5.3.0"
